--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,75 @@
 body { 
     background-color:hsl(30, 38%, 92%);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 31px;
-    font-weight: normal;
-    line-height: 1cm;
 }
 .container{
     background-color: hsl(0, 0%, 100%);
-    margin: 10% 25% 10% 25%;
-    display: inline-flex;
+    margin: 9% 30% 9% 30%; 
+    width: 40%; /*size of flex in reference to window size*/
+    display: flex;/*flex instead of block to prevent auto newline*/
+    border-radius: 10px;
+    box-sizing: border-box;
 }
-.container img{
-    height: auto;
-    width: 38%;
+img{
+    /*setting image size*/
+    width: 100%;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
 }
-
-
-@media (max-width:480px) or (max-width:767px) or (max-width:1024){
-
-    /*  Mobile design  for later use  */
-
+.image{
+    flex-basis: 50%; /*Used to be the funny number*/
 }
-
-@media (max-width:1280px) or (max-width:1440px){
-
-    /* Desktop design for later use */
-
-} 
+.Card-title{
+    padding-left: 6%; /*Total size of text and button block*/
+    padding-top: 7%;
+    padding-right: 12%;
+    text-align: left;
+    flex-basis: 50%;
+    box-sizing: border-box;
+}
+.Card-title p1{
+    font-family: "Montserrat",sans-serif; 
+    font-size: 14px;
+    font-weight: 500;
+}
+.Card-title h1{
+    font-family: "Fraunces", serif;
+    font-size: 38px;
+    font-weight: 700;
+}
+.Card-title p2{
+    font-family: "Montserrat",sans-serif;
+    font-size: 14px;
+    font-weight: 350;
+    font-stretch: extra-condensed;
+}
+.Card-title p3{
+    font-family: "Fraunces";
+    font-size: 38px;
+    font-weight: 700;
+    color: hsl(158, 36%, 37%);
+}
+.Card-title p4{
+    font-family: "Montserrat",sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    text-decoration: line-through;
+    padding-left: 5%;
+    position: relative;
+    top: -1.5%;
+}
+.button1{
+    background-color: hsl(158, 36%, 37%); /*Button design*/
+    border: none;
+    color: white;
+    padding: 15px 70px;
+    border-radius: 10px;
+    font-size: 13px;
+    font-family: "Montserrat";
+    font-weight: bold;
+    cursor: pointer;
+    display: inline-block;
+    transition-duration: 0.4s;
+}
+.button1:hover{
+    background-color: hsl(158, 71%, 12%);
+}
